--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Stitchy | stitches counter</title>
+    <title>Stitchy | Your crochet friend</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
